--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
     network_mode: "host"
     volumes:
       - efergygw-log:/var/log/efergygw
+    dns:
+      - 192.168.100.1
 
 # volumes
 volumes:
